--- a/index.css
+++ b/index.css
@@ -58,6 +58,10 @@ main {
 }
 
 .partition-columns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
     height: 100px;
     width: 100px;
     border-top: 1px solid;
